crates/wac-parser/tests/resolution/fail/duplicate-variant-case.wac
type x = string;

variant x {
    a(x),
    b,
    a,
}